<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.task.aliessa.appsinnovatetask.MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_margin="10dp"
        android:contentDescription="@string/share_photo" />

    <com.facebook.share.widget.ShareButton
        android:id="@+id/fb_share_button"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/imageView"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:background="@color/com_facebook_button_login_background_color"
        android:text="@string/share"
        android:textColor="@color/com_facebook_button_text_color"
        tools:ignore="RtlHardcoded" />

    <Button
        android:id="@+id/Btn_add_photo"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dim30"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/imageView"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:background="@color/com_facebook_button_login_background_color"
        android:text="@string/add_photo"
        android:textColor="@color/com_facebook_button_text_color"
        tools:ignore="RtlHardcoded" />

</RelativeLayout>
